ref: try fix linux not showing carret on scroll down

--- a/src/main.css
+++ b/src/main.css
@@ -35,10 +35,10 @@
 html,
 body,
 #terminal {
-    min-height: 100vh;
-    padding: 0;
     margin: 0;
+    min-height: 100vh;
     padding-left: .25%;
+    padding-bottom: .1%;
 }
 
 .username {
